fix spacing and remove unwanted old PR stuff

--- a/src/components/experiment-tracking/run-dataset/run-dataset.scss
+++ b/src/components/experiment-tracking/run-dataset/run-dataset.scss
@@ -136,5 +136,5 @@
 
 .details-dataset__deltaValue {
   color: variables.$blue-300;
-  margin-left: -0.3em;
+  margin-left: 0.5em;
 }
